--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<?php
-  echo 'Hello, world!'; 
-?>
+<html>
+   <head>
+      <title>
+         Тестируем PHP
+      </title>
+   </head>
+   <body>
+      <?php
+         echo "Привет мир!";
+      ?>
+   </body>
+</html>
