--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<html>
-   <head>
-      <title>
-         Тестируем PHP
-      </title>
-   </head>
-   <body>
-      <?php
-         echo "Привет мир!";
-      ?>
-   </body>
-</html>
+<script src="https://ideone.com/e.js/sjq5Ir" type="text/javascript" ></script>
