--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script src="https://ideone.com/e.js/sjq5Ir" type="text/javascript" ></script>
+<script src="https://ideone.com/e.js/prj8is" type="text/javascript" ></script>
