--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<a href="https://github.com/system1010/sort-search">https://github.com/system1010/sort-search</a>
 <p>stbout bubble</p>
 <p>64 34 25 12 22 11 90</p>
 <p>0.001668 j=0 [34-64<0] 34 64 25 12 22 11 90 </p>
