--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@ stdout select
 
 stdout count
 
+
+time step op permute 
+
 0.001815 i=14 j=13 [39 > 7] 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1  inversion count i
 0.002027 i=14 j=12 [39 > 33] 0 0 0 0 0 0 0 0 0 0 0 0 0 0 2  inversion count i
 0.002040 i=14 j=11 [39 < 665] 0 0 0 0 0 0 0 0 0 0 0 1 0 0 2  not inversion count j
@@ -104,4 +107,5 @@ stdout count
    0.003063 i=1 j=0 [45 < 170] 11 5 9 10 14 2 0 8 6 7 13 12 3 1 4  not inversion count j
    2 7 24 33 39 45 46 51 66 75 90 170 665 765 802 
 
+   result massiv
 </pre>
