--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <a href="https://github.com/system1010/sort-search">https://github.com/system1010/sort-search</a>
 <pre>stbout bubble
-64 34 25 12 22 11 90
-0.001668 j=0 [34-64<0] 34 64 25 12 22 11 90
-0.001704 j=1 [25-64<0] 34 25 64 12 22 11 90 
-0.001718 j=2 [12-64<0] 34 25 12 64 22 11 90 
-0.001730 j=3 [22-64<0] 34 25 12 22 64 11 90
-0.001742 j=4 [11-64<0] 34 25 12 22 11 64 90 
-0.001754 j=0 [25-34<0] 25 34 12 22 11 64 90
-0.001766 j=1 [12-34<0] 25 12 34 22 11 64 90
-0.001778 j=2 [22-34<0] 25 12 22 34 11 64 90
-0.001789 j=3 [11-34<0] 25 12 22 11 34 64 90 
-0.001801 j=0 [12-25<0] 12 25 22 11 34 64 90 
-0.001812 j=1 [22-25<0] 12 22 25 11 34 64 90 
-0.001824 j=2 [11-25<0] 12 22 11 25 34 64 90
-0.001835 j=1 [11-22<0] 12 11 22 25 34 64 90 
-0.001847 j=0 [11-12<0] 11 12 22 25 34 64 90 
-11 12 22 25 34 64 90 
+6 5 4 2 3 1 7 
+0.001543 j=0 [5-6<0] 5 6 4 2 3 1 7 
+0.001582 j=1 [4-6<0] 5 4 6 2 3 1 7 
+0.001595 j=2 [2-6<0] 5 4 2 6 3 1 7 
+0.001607 j=3 [3-6<0] 5 4 2 3 6 1 7 
+0.001620 j=4 [1-6<0] 5 4 2 3 1 6 7 
+inversion table: 4 2 2 1 0 0 0 
+0.001640 j=0 [4-5<0] 4 5 2 3 1 6 7 
+0.001653 j=1 [2-5<0] 4 2 5 3 1 6 7 
+0.001665 j=2 [3-5<0] 4 2 3 5 1 6 7 
+0.001676 j=3 [1-5<0] 4 2 3 1 5 6 7 
+inversion table: 3 1 1 0 0 0 0 
+0.001695 j=0 [2-4<0] 2 4 3 1 5 6 7 
+0.001707 j=1 [3-4<0] 2 3 4 1 5 6 7 
+0.001727 j=2 [1-4<0] 2 3 1 4 5 6 7 
+inversion table: 2 0 0 0 0 0 0 
+0.001764 j=1 [1-3<0] 2 1 3 4 5 6 7 
+inversion table: 1 0 0 0 0 0 0 
+0.001800 j=0 [1-2<0] 1 2 3 4 5 6 7 
+1 2 3 4 5 6 7 
 
 start massiv
 time step [op] massiv
-result massiv</pre>
 
 
 <pre>
@@ -94,8 +97,8 @@ time step op permute
    0.002122 i=14 j=2 [39 < 75] 0 0 1 1 1 0 0 1 1 1 1 1 0 0 4  not inversion count j
 ...
 =5 j=1 [24 < 45] 7 5 8 8 10 2 0 8 6 7 13 12 3 1 4  not inversion count j
-   0.002880 i=5 j=0 [24 < 170] 8 5 8 8 10 2 0 8 6 7 13 12 3 1 4  not inversion count j
-   0.002889 i=4 j=3 [802 > 90] 8 5 8 8 11 2 0 8 6 7 13 12 3 1 4  inversion count i
+0.002880 i=5 j=0 [24 < 170] 8 5 8 8 10 2 0 8 6 7 13 12 3 1 4  not inversion count j
+0.002889 i=4 j=3 [802 > 90] 8 5 8 8 11 2 0 8 6 7 13 12 3 1 4  inversion count i
    0.002898 i=4 j=2 [802 > 75] 8 5 8 8 12 2 0 8 6 7 13 12 3 1 4  inversion count i
    0.002908 i=4 j=1 [802 > 45] 8 5 8 8 13 2 0 8 6 7 13 12 3 1 4  inversion count i
    0.002917 i=4 j=0 [802 > 170] 8 5 8 8 14 2 0 8 6 7 13 12 3 1 4  inversion count i
@@ -107,5 +110,5 @@ time step op permute
    0.003063 i=1 j=0 [45 < 170] 11 5 9 10 14 2 0 8 6 7 13 12 3 1 4  not inversion count j
    2 7 24 33 39 45 46 51 66 75 90 170 665 765 802 
 
-   result massiv
+result massiv
 </pre>
