--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <a href="https://github.com/system1010/sort-search">https://github.com/system1010/sort-search</a>
-<pre>stbout bubble
+<pre>stdout bubble
 6 5 4 2 3 1 7 
 0.001543 j=0 [5-6<0] 5 6 4 2 3 1 7 
 0.001582 j=1 [4-6<0] 5 4 6 2 3 1 7 
