--- a/index.html
+++ b/index.html
@@ -42,6 +42,31 @@ time step [op] massiv
 </pre>
 
 <pre>
+cocktail
+6 4 5 2 3 1 7 
+0.001749 j=0 [4-6<0] 4 6 5 2 3 1 7 
+0.001786 j=1 [5-6<0] 4 5 6 2 3 1 7 
+0.001800 j=2 [2-6<0] 4 5 2 6 3 1 7 
+0.001812 j=3 [3-6<0] 4 5 2 3 6 1 7 
+0.001824 j=4 [1-6<0] 4 5 2 3 1 6 7 
+0.001836 k=4 [1-3<0] 4 5 2 1 3 6 7 
+0.001847 k=3 [1-2<0] 4 5 1 2 3 6 7 
+0.001858 k=2 [1-5<0] 4 1 5 2 3 6 7 
+0.001870 k=1 [1-4<0] 1 4 5 2 3 6 7 
+inversion table: 0 2 2 0 0 0 0 
+0.001889 j=2 [2-5<0] 1 4 2 5 3 6 7 
+0.001901 j=3 [3-5<0] 1 4 2 3 5 6 7 
+0.001913 k=2 [2-4<0] 1 2 4 3 5 6 7 
+inversion table: 0 0 1 0 0 0 0 
+0.001931 j=2 [3-4<0] 1 2 3 4 5 6 7 
+inversion table: 0 0 0 0 0 0 0 
+1 2 3 4 5 6 7 
+
+
+</pre>
+
+
+<pre>
 stdout select
 64 34 25 12 22 11 90 
 0.001754 j=6 [90-11>0] Ki=90  64 34 25 12 22 11 90 
@@ -53,7 +78,7 @@ stdout select
 0.001923 j=0 [64-0>0] Ki=90  64 34 25 12 22 11 90 
 0.001940 j=5 [11-22>0] Ki=11  64 34 25 12 22 11 90 
 0.001952 j=4 [22-12>0] Ki=22  64 34 25 12 22 11 90 
-0.001965 j=3 [12-25>0] Ki=22  64 34 25 12 22 11 90 
+0.001965 j=3 [12-25>0] Ki22  64 34 25 12 22 11 90 
 0.001978 j=2 [25-34>0] Ki=25  64 34 25 12 22 11 90 
 0.002001 j=1 [34-64>0] Ki=34  64 34 25 12 22 11 90 
 0.002023 j=0 [64-0>0] Ki=64  64 34 25 12 22 11 90 
