--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<a>https://yadi.sk/d/0dfM-YL-eOoDsw</a>
-<a>"             "</a>
-<a>under construction</a>
-<a>"           "</a>
+<a"">https://yadi.sk/d/0dfM-YL-eOoDsw</a>
+under construction
 https://stackoverflow.com/questions/30887143/make-j-8-g-internal-compiler-error-killed-program-cc1plus
-<a>"           "</a>
 https://stackoverflow.com/questions/47100545/how-to-build-qtwebengine-5-10-from-source
