--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<a"">https://yadi.sk/d/0dfM-YL-eOoDsw</a>
-under construction
-https://stackoverflow.com/questions/30887143/make-j-8-g-internal-compiler-error-killed-program-cc1plus
-https://stackoverflow.com/questions/47100545/how-to-build-qtwebengine-5-10-from-source
+<a"">https://yadi.sk/d/uYTLKmHYg-fMMw</a>
+
+file writer
+
+file reader
