--- a/index.html
+++ b/index.html
@@ -1,139 +1,2 @@
-<a href="https://github.com/system1010/sort-search">https://github.com/system1010/sort-search</a>
-<pre>stdout bubble
-6 5 4 2 3 1 7 
-0.001543 j=0 [5-6<0] 5 6 4 2 3 1 7 
-0.001582 j=1 [4-6<0] 5 4 6 2 3 1 7 
-0.001595 j=2 [2-6<0] 5 4 2 6 3 1 7 
-0.001607 j=3 [3-6<0] 5 4 2 3 6 1 7 
-0.001620 j=4 [1-6<0] 5 4 2 3 1 6 7 
-inversion table: 4 2 2 1 0 0 0 
-0.001640 j=0 [4-5<0] 4 5 2 3 1 6 7 
-0.001653 j=1 [2-5<0] 4 2 5 3 1 6 7 
-0.001665 j=2 [3-5<0] 4 2 3 5 1 6 7 
-0.001676 j=3 [1-5<0] 4 2 3 1 5 6 7 
-inversion table: 3 1 1 0 0 0 0 
-0.001695 j=0 [2-4<0] 2 4 3 1 5 6 7 
-0.001707 j=1 [3-4<0] 2 3 4 1 5 6 7 
-0.001727 j=2 [1-4<0] 2 3 1 4 5 6 7 
-inversion table: 2 0 0 0 0 0 0 
-0.001764 j=1 [1-3<0] 2 1 3 4 5 6 7 
-inversion table: 1 0 0 0 0 0 0 
-0.001800 j=0 [1-2<0] 1 2 3 4 5 6 7 
-1 2 3 4 5 6 7 
-
-start massiv
-time step [op] massiv
-
-
-<pre>
-                  _______1:2_______
-                 /                 \
-                /                   \
-               /                     \
-             2:3                     2:3
-             /  \                    /  \
-            /    \                  /    \
-           /      \                /      \
-         1 2 3    1:3             1:3    3 2 1
-                 /   \           /   \
-                /     \         /     \
-               /       \       /       \
-             1 3 2   3 1 2   2 1 3    2 3 1
-</pre>
-
-<pre>
-cocktail
-6 4 5 2 3 1 7 
-0.001749 j=0 [4-6<0] 4 6 5 2 3 1 7 
-0.001786 j=1 [5-6<0] 4 5 6 2 3 1 7 
-0.001800 j=2 [2-6<0] 4 5 2 6 3 1 7 
-0.001812 j=3 [3-6<0] 4 5 2 3 6 1 7 
-0.001824 j=4 [1-6<0] 4 5 2 3 1 6 7 
-0.001836 k=4 [1-3<0] 4 5 2 1 3 6 7 
-0.001847 k=3 [1-2<0] 4 5 1 2 3 6 7 
-0.001858 k=2 [1-5<0] 4 1 5 2 3 6 7 
-0.001870 k=1 [1-4<0] 1 4 5 2 3 6 7 
-inversion table: 0 2 2 0 0 0 0 
-0.001889 j=2 [2-5<0] 1 4 2 5 3 6 7 
-0.001901 j=3 [3-5<0] 1 4 2 3 5 6 7 
-0.001913 k=2 [2-4<0] 1 2 4 3 5 6 7 
-inversion table: 0 0 1 0 0 0 0 
-0.001931 j=2 [3-4<0] 1 2 3 4 5 6 7 
-inversion table: 0 0 0 0 0 0 0 
-1 2 3 4 5 6 7 
-
-
-</pre>
-
-
-<pre>
-stdout select
-64 34 25 12 22 11 90 
-0.001754 j=6 [90-11>0] Ki=90  64 34 25 12 22 11 90 
-0.001798 j=5 [11-22>0] Ki=90  64 34 25 12 22 11 90 
-0.001812 j=4 [22-12>0] Ki=90  64 34 25 12 22 11 90 
-0.001825 j=3 [12-25>0] Ki=90  64 34 25 12 22 11 90 
-0.001838 j=2 [25-34>0] Ki=90  64 34 25 12 22 11 90 
-0.001850 j=1 [34-64>0] Ki=90  64 34 25 12 22 11 90 
-0.001923 j=0 [64-0>0] Ki=90  64 34 25 12 22 11 90 
-0.001940 j=5 [11-22>0] Ki=11  64 34 25 12 22 11 90 
-0.001952 j=4 [22-12>0] Ki=22  64 34 25 12 22 11 90 
-0.001965 j=3 [12-25>0] Ki22  64 34 25 12 22 11 90 
-0.001978 j=2 [25-34>0] Ki=25  64 34 25 12 22 11 90 
-0.002001 j=1 [34-64>0] Ki=34  64 34 25 12 22 11 90 
-0.002023 j=0 [64-0>0] Ki=64  64 34 25 12 22 11 90 
-0.002044 j=4 [22-12>0] Ki=22  11 34 25 12 22 64 90 
-0.002066 j=3 [12-25>0] Ki=22  11 34 25 12 22 64 90 
-0.002087 j=2 [25-34>0] Ki=25  11 34 25 12 22 64 90 
-0.002108 j=1 [34-11>0] Ki=34  11 34 25 12 22 64 90 
-0.002130 j=0 [11-0>0] Ki=34  11 34 25 12 22 64 90 
-0.002150 j=3 [12-25>0] Ki=12  11 22 25 12 34 64 90 
-0.002171 j=2 [25-22>0] Ki=25  11 22 25 12 34 64 90 
-0.002193 j=1 [22-11>0] Ki=25  11 22 25 12 34 64 90 
-0.002214 j=0 [11-0>0] Ki=25  11 22 25 12 34 64 90 
-0.002235 j=2 [12-22>0] Ki=12  11 22 12 25 34 64 90 
-0.002255 j=1 [22-11>0] Ki=22  11 22 12 25 34 64 90 
-0.002276 j=0 [11-0>0] Ki=22  11 22 12 25 34 64 90 
-0.002297 j=1 [12-11>0] Ki=12  11 12 22 25 34 64 90 
-0.002318 j=0 [11-0>0] Ki=12  11 12 22 25 34 64 90 
-0.002339 j=0 [11-0>0] Ki=11  11 12 22 25 34 64 90 
-11 12 22 25 34 64 90 
-</pre>
-
-
-<pre>
-
-stdout count
-
-
-time step op permute 
-
-0.001815 i=14 j=13 [39 > 7] 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1  inversion count i
-0.002027 i=14 j=12 [39 > 33] 0 0 0 0 0 0 0 0 0 0 0 0 0 0 2  inversion count i
-0.002040 i=14 j=11 [39 < 665] 0 0 0 0 0 0 0 0 0 0 0 1 0 0 2  not inversion count j
-   0.002050 i=14 j=10 [39 < 765] 0 0 0 0 0 0 0 0 0 0 1 1 0 0 2  not inversion count j
-   0.002059 i=14 j=9 [39 < 51] 0 0 0 0 0 0 0 0 0 1 1 1 0 0 2  not inversion count j
-   0.002068 i=14 j=8 [39 < 46] 0 0 0 0 0 0 0 0 1 1 1 1 0 0 2  not inversion count j
-   0.002077 i=14 j=7 [39 < 66] 0 0 0 0 0 0 0 1 1 1 1 1 0 0 2  not inversion count j
-   0.002086 i=14 j=6 [39 > 2] 0 0 0 0 0 0 0 1 1 1 1 1 0 0 3  inversion count i
-   0.002095 i=14 j=5 [39 > 24] 0 0 0 0 0 0 0 1 1 1 1 1 0 0 4  inversion count i
-   0.002104 i=14 j=4 [39 < 802] 0 0 0 0 1 0 0 1 1 1 1 1 0 0 4  not inversion count j
-   0.002113 i=14 j=3 [39 < 90] 0 0 0 1 1 0 0 1 1 1 1 1 0 0 4  not inversion count j
-   0.002122 i=14 j=2 [39 < 75] 0 0 1 1 1 0 0 1 1 1 1 1 0 0 4  not inversion count j
-...
-=5 j=1 [24 < 45] 7 5 8 8 10 2 0 8 6 7 13 12 3 1 4  not inversion count j
-0.002880 i=5 j=0 [24 < 170] 8 5 8 8 10 2 0 8 6 7 13 12 3 1 4  not inversion count j
-0.002889 i=4 j=3 [802 > 90] 8 5 8 8 11 2 0 8 6 7 13 12 3 1 4  inversion count i
-   0.002898 i=4 j=2 [802 > 75] 8 5 8 8 12 2 0 8 6 7 13 12 3 1 4  inversion count i
-   0.002908 i=4 j=1 [802 > 45] 8 5 8 8 13 2 0 8 6 7 13 12 3 1 4  inversion count i
-   0.002917 i=4 j=0 [802 > 170] 8 5 8 8 14 2 0 8 6 7 13 12 3 1 4  inversion count i
-   0.002926 i=3 j=2 [90 > 75] 8 5 8 9 14 2 0 8 6 7 13 12 3 1 4  inversion count i
-   0.002936 i=3 j=1 [90 > 45] 8 5 8 10 14 2 0 8 6 7 13 12 3 1 4  inversion count i
-   0.002945 i=3 j=0 [90 < 170] 9 5 8 10 14 2 0 8 6 7 13 12 3 1 4  not inversion count j
-   0.003036 i=2 j=1 [75 > 45] 9 5 9 10 14 2 0 8 6 7 13 12 3 1 4  inversion count i
-   0.003053 i=2 j=0 [75 < 170] 10 5 9 10 14 2 0 8 6 7 13 12 3 1 4  not inversion count j
-   0.003063 i=1 j=0 [45 < 170] 11 5 9 10 14 2 0 8 6 7 13 12 3 1 4  not inversion count j
-   2 7 24 33 39 45 46 51 66 75 90 170 665 765 802 
-
-result massiv
-</pre>
+<a href="https://github.com/system1010/sort-search">https://github.com/system1010/chat</a>
+<pre>simple chat
