--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<a href="https://github.com/system1010/sort-search">https://github.com/system1010/chat</a>
+<a href="https://github.com/system1010/chat">https://github.com/system1010/chat</a>
 <pre>simple chat
